# AI-Context-Vibrational-System

./: .gitignore  ACE-Step-1.5-Analysis.md  ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  SYSTEM_CONTRACT.md  example_usage.py  pyproject.toml  requirements.txt  verify_system.py
adaptive_audio_system/: README.md  __init__.py  config.py
adaptive_audio_system/modules/: __init__.py  adaptation_loop.py  audio_generator.py  latent_audio_planner.py  latent_context_model.py  raw_signal_ingestion.py  user_response_model.py
gps_adaptive_audio/: README.md  RUNTIME_STATUS.md  SYSTEM_STATUS_REPORT.md  acestep_dit_generator.py  backend.py  frontend.html  requirements.txt  verify.py
gps_audio_live/: RUN.md  backend.py  frontend.html
